[package]
name = "fuel-eth-keystore"
version = "0.5.0"
authors = ["Rohit Narurkar <rohit.narurkar@protonmail.com>"]
edition = "2018"
license = "Apache-2.0"
description = "A minimalist library to interact with encrypted JSON keystores"
documentation = "https://docs.rs/eth-keystore"
repository = "https://github.com/roynalnaruto/eth-keystore-rs"
readme = "README.md"
keywords = ["ethereum", "web3", "wallet"]
exclude = ["tests/test-keys/*"]

[dependencies]
aes = "0.8.2"
ctr = "0.9.2"
digest = "0.10.6"
hex = "0.4.3"
hmac = "0.12.1"
pbkdf2 = "0.11.0"
rand = "0.8.5"
scrypt = "0.10.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.6"
sha3 = "0.10.6"
thiserror = { version = "1.0.37", default-features = false }
uuid = { version = "1.2", features = ["serde", "v4"] }

# feature = "geth-compat"
ethereum-types = { version = "0.14.1", optional = true }
k256 = { version = "0.11.6", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
uuid = { version = "1.2", features = ["serde", "v4", "js"] }

[features]
geth-compat = ["ethereum-types", "k256", "k256/ecdsa"]
